# fig

./: .gitignore  Bookmatter.md  CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  README.md  VERSIONING.md  build.zig  build.zig.zon  fig.md  flake.nix
.githooks/: pre-commit
.github/workflows/: ci-npm.yml  ci-rust.yml  ci.yml  fuzz.yml  homebrew.yml  release-binaries.yml  release-npm-wasi.yml  release-npm.yml  release.yml
.zed/: debug.json
bindings/c/include/: fig.h
bindings/rust/: Cargo.toml  build.rs  prebuilt-targets.tsv
bindings/rust/examples/: wasm_smoke.rs
bindings/rust/fig/: Cargo.toml  build.rs
bindings/rust/fig-macros/: Cargo.toml
bindings/rust/fig-macros/src/: lib.rs
bindings/rust/fig-sys/: Cargo.toml  README.md  build.rs
bindings/rust/fig-sys-linux-arm64-gnu/: Cargo.toml  README.md
bindings/rust/fig-sys-linux-arm64-gnu/src/: lib.rs
bindings/rust/fig-sys-linux-x64-gnu/: Cargo.toml  README.md  build.rs
bindings/rust/fig-sys-linux-x64-gnu/src/: lib.rs
bindings/rust/fig-sys-macos-arm64/: Cargo.toml  README.md
bindings/rust/fig-sys-macos-arm64/src/: lib.rs
bindings/rust/fig-sys-wasm32/: Cargo.toml  README.md
bindings/rust/fig-sys-wasm32/src/: lib.rs
bindings/rust/fig-sys-windows-x64-msvc/: Cargo.toml  README.md
bindings/rust/fig-sys-windows-x64-msvc/src/: lib.rs
bindings/rust/fig-sys/src/: lib.rs
bindings/rust/fig/src/: convert.rs  de.rs  diagnostics.rs  editor.rs  embed.rs  error.rs  ffi.rs  lib.rs  ser.rs  value.rs
bindings/rust/fig/tests/: derive.rs  derive_enum.rs  deserialize.rs  edit.rs  serialize.rs
bindings/rust/scripts/: build-payload-lib.sh  gen-payloads.sh
bindings/rust/src/: de.rs  editor.rs  embed.rs  error.rs  ffi.rs  frontmatter.rs  lib.rs  ser.rs  value.rs
bindings/rust/tests/: deserialize.rs  edit.rs  serialize.rs
bindings/typescript/: .gitignore  package-lock.json  package.json  tsconfig.json
bindings/typescript/scripts/: build-wasm.mjs  vendor-publish-files.mjs
bindings/typescript/src/: document.ts  edit-ops.ts  editor.ts  embed.ts  ffi.ts  index.ts  meta.ts  types.ts  value.ts
bindings/typescript/test/: fig.test.ts
bindings/wasi/: .gitignore  package-lock.json  package.json
bindings/wasi/scripts/: build-wasm.mjs  vendor-publish-files.mjs
bindings/wasi/test/: fig-wasi.test.mjs
docs/: BREAKING-CHANGES.md  BUILD.md  CONTRIBUTING.md  VERSIONING.md  docs.md  npm-wasi.md  rust.md  spec.md  testing.md  typescript.md  zig.md
docs/devlogs/: 1-0-0.md  2-0-0.md  2-5-0.md  devlogs.md
editors/: README.md
editors/tree-sitter-fig/: .gitignore  grammar.js  package-lock.json  package.json  tree-sitter.json
editors/tree-sitter-fig/src/: grammar.json  node-types.json  parser.c  scanner.c
editors/zed-fig/: Cargo.toml  extension.toml
editors/zed-fig/icon_themes/: fig-icons.json
editors/zed-fig/languages/fig/: config.toml  highlights.scm
editors/zed-fig/src/: lib.rs
figl/: build.zig.figl  ci-npm.figl  ci-rust.figl  ci.figl  fuzz.figl  homebrew.figl  release-binaries.figl  release-npm-wasi.figl  release-npm.figl  release.figl
include/: fig.h
src/: ast.zig  c_api.zig  deserialize.zig  diagnostics.zig  document.zig  editor.zig  embed.zig  flat_strip.zig  fuzz.zig  json.zig  language.zig  lossless.zig  main.zig  parse_diagnostic.zig  root.zig  token.zig  value.zig
src/ast/: ast.zig  builder.zig  reader.zig  serialize_options.zig
src/canonical/: canonical.zig  parser.zig  printer.zig
src/cli/: actions.zig  args.zig  diag_report.zig  diff.zig  edit_ops.zig  fileio.zig  gron.zig  help.zig  main.zig  parse_dispatch.zig  reformat.zig  types.zig
src/fig/: fig.zig  parser.zig  printer.zig  tokenizer.zig
src/fig/testdata/: kitchen_sink.fig  kitchen_sink.fig.txt
src/json/: editor_helper.zig  json.zig  json5_conformance.zig  parser.zig  printer.zig  tokenizer.zig
src/languages/: language.zig
src/languages/dotenv/: dotenv.zig  parser.zig  printer.zig  tokenizer.zig
src/languages/fig/: DESIGN.md  editor_helper.zig  fig.zig  notes.md  parser.zig  printer.zig  tokenizer.zig
src/languages/ini/: editor_helper.zig  ini.zig  parser.zig  printer.zig  tokenizer.zig
src/languages/json/: conformance.zig  editor_helper.zig  json.zig  json5_conformance.zig  parser.zig  printer.zig  tokenizer.zig
src/languages/nestedtext/: conformance.zig  editor_helper.zig  nestedtext.zig  parser.zig  printer.zig  tokenizer.zig
src/languages/plist/: conformance.zig  editor_helper.zig  parser.zig  plist.zig  printer.zig
src/languages/properties/: parser.zig  printer.zig  properties.zig  tokenizer.zig
src/languages/shared/: flat_map.zig
src/languages/toml/: conformance.zig  editor_helper.zig  parser.zig  (+3 more)
src/lsp/: main.zig
src/native/: native.zig  parser.zig  printer.zig
src/toml/: conformance.zig  editor_helper.zig  parser.zig  printer.zig  tokenizer.zig  toml.zig
src/util/: ascii.zig  datetime.zig  json_string.zig  number.zig  span.zig  unicode.zig  util.zig  width.zig
src/xml/: parser.zig  tokenizer.zig  xml.zig
src/yaml/: conformance.zig  conformance_1_1.zig  editor_helper.zig  materialize.zig  parser.zig  printer.zig  tokenizer.zig  yaml.zig
src/zon/: parser.zig  printer.zig  zon.zig
testdata/yaml/: skiplist.txt
testdata/yaml-1.1/: README.md  bool__false-forms.json  bool__false-forms.yaml  bool__true-forms.json  bool__true-forms.yaml  float__base10.json  float__base10.yaml  float__base60.json  float__base60.yaml  float__inf-nan.json  float__inf-nan.yaml  int__base10.json  int__base10.yaml  int__base16.json  int__base16.yaml  int__base2.json  int__base2.yaml  int__base60.json  int__base60.yaml  int__base8.json  int__base8.yaml  null__forms.json  null__forms.yaml  string__bare-words.json  string__bare-words.yaml  string__not-1-1-numbers.json  string__not-1-1-numbers.yaml  timestamp__forms.json  timestamp__forms.yaml
tools/: abi-check.zig  abi_probe.c  abi_probe.cpp  check_yaml_trees.zig  fuzz_test_runner.zig  gen_json5_conformance.zig  gen_toml_conformance.zig  gen_yaml_conformance.zig  semver-check.zig  sync-figl.zig  vendor-rust.zig  version-floor.zig  version-set.zig  version_fields.zig
(+38 files in other folders)
