[workspace]
resolver = "3"
members = ["fig", "fig-macros"]

[workspace.package]
version = "2.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# Shared across the workspace so `fig` and `fig-macros` pin one set of versions.
[workspace.dependencies]
fig-macros = { path = "fig-macros", version = "2.3.0" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
