[package]
name = "fig-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Derive macros (ToValue/FromValue) for the `fig` crate."
repository = "https://github.com/adammharris/fig"
# Allowlist so the LICENSE files (git-ignored, vendored in by `zig build
# vendor-rust` from the repo root) are force-added to the published tarball.
include = [
    "src/**/*",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
