[package]
name = "fig-sys-linux-x64-gnu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Prebuilt libfig.a (default features) for x86_64-unknown-linux-gnu. Support crate for fig-sys; not for direct use."
repository = "https://github.com/diaryx-org/fig"
# The build script hands `lib/libfig.a`'s location to `fig-sys` via this
# `links` key (as `DEP_FIG_PREBUILT_LINUX_X64_GNU_LIBDIR`). Unique per payload crate.
links = "fig_prebuilt_linux_x64_gnu"
# Allowlist: the prebuilt archive plus the trivial crate skeleton. `lib/` is
# git-ignored and populated by scripts/build-payload-lib.sh (or CI) before publish.
include = ["build.rs", "src/lib.rs", "lib/libfig.a", "README.md"]

[lib]
name = "fig_sys_linux_x64_gnu"
path = "src/lib.rs"
