[package]
name = "fig"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parse, edit, and convert config files while preserving comments. Supports JSON, YAML, TOML, and more."
repository = "https://github.com/adammharris/fig"
# Rendered by crates.io on the package page. The file is the repo-root `fig.md`,
# copied in by `zig build vendor-rust` before publishing (git-ignored here, so
# `include` force-adds it to the tarball — see below). A local checkout that has
# not run the vendor step simply has no README.md; cargo only requires it when
# packaging/publishing, not for `build`/`test`.
readme = "README.md"
# The native library and its Zig source now live entirely in `fig-sys` (a
# dependency), so this crate packages only its own Rust sources plus the
# vendored README/licenses. No `build.rs`, no `zig/` tree, no `links` here.
include = [
    "src/**/*",
    # Vendored in by `zig build vendor-rust` from the repo root (git-ignored here).
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
]

[lib]
name = "fig"
path = "src/lib.rs"

# JSON is in `default`, not implied by the base crate: `--no-default-features`
# compiles it out too (like any other language). `serde` is opt-in — the crate
# parses, edits, and serializes through the `Value` tree (and `#[derive]`) with
# no serde at all.
[features]
default = ["json", "yaml", "toml", "fig"]
# Typed (de)serialization: `to_string`/`from_str`, the editor's `T: Serialize`
# value methods, and serde impls for `Value`. Opt-in (not in `default`); without
# it, the binding still parses, edits, and serializes via the `Value` tree
# directly, and `#[derive(ToValue, FromValue)]` covers typed struct mapping.
serde = ["dep:serde"]
# Ergonomic typed mapping without serde: `#[derive(fig::ToValue, fig::FromValue)]`
# generates straight-line conversions to/from the concrete `Value` tree (no
# format-generic Visitor machinery), via the `fig-macros` proc-macro crate.
derive = ["dep:fig-macros"]
# `ToValue`/`FromValue` impls for `indexmap::IndexMap<String, T>`, preserving
# insertion order (unlike the std map impls). Opt-in to keep the dep optional.
indexmap = ["dep:indexmap"]
# Per-language gates, mirroring `build.zig`'s `-D<lang>` options. Each forwards
# to the like-named `fig-sys` feature, which `fig-sys`'s build script reads to
# compile that format's parser/printer in or out of `libfig.a` (the `default`
# set links a prebuilt archive with no Zig toolchain; any other combination
# builds from source). The `Format` enum keeps every variant regardless;
# selecting a format whose feature is off returns `Error::UnsupportedFormat`.
# `json` gates the shared JSON/JSONC/JSON5 core.
json = ["fig-sys/json"]
yaml = ["fig-sys/yaml"]
toml = ["fig-sys/toml"]
zon = ["fig-sys/zon"]
xml = ["fig-sys/xml"]
fig = ["fig-sys/fig"]

[dependencies]
# The `-sys` layer: raw FFI + the `links = "fig"` build script that provides
# `libfig.a`. The workspace entry sets `default-features = false` so this
# crate's own per-language features are the sole driver of what fig-sys compiles.
fig-sys = { workspace = true }
serde = { version = "1", optional = true }
fig-macros = { workspace = true, optional = true }
indexmap = { version = "2", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
